--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-slick-carousel",
-  "version": "1.0.5",
+  "name": "vue-slick-carousel2",
+  "version": "1.0.6",
   "description": "Vue Slick Carousel with True SSR Written for Faster Luxstay",
   "keywords": [
     "vue",
@@ -11,15 +11,15 @@
     "pwa",
     "nuxt"
   ],
-  "homepage": "https://gs-shop.github.io/vue-slick-carousel/",
+  "homepage": "https://github.com/ekanant/vue-slick-carousel/tree/main",
   "bugs": {
     "url": "https://github.com/gs-shop/vue-slick-carousel/issues"
   },
   "license": "MIT",
-  "author": "KyuWoo Choi <kyuwoo.choi@gmail.com> (https://kyu.io/)",
+  "author": "Ekanant Phanuwatyingyong <ekanant2535@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gs-shop/vue-slick-carousel.git"
+    "url": "https://github.com/ekanant/vue-slick-carousel/tree/main"
   },
   "scripts": {
     "serve": "vue-cli-service serve --open",
